Prevent layout shifting in the Library

--- a/src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
+++ b/src/ui/components/Dashboard/RecordingItem/RecordingListItem.css
@@ -115,20 +115,21 @@
 .recording-list .recording-item .screenshot {
   background: var(--theme-toolbar-background);
   height: 100%;
+  min-height: 80px; /* match the image's height to avoid shifting */
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.recording-list .recording-item.selected {
-  background: hsl(201, 88%, 95%);
-  border-bottom: 1px solid hsl(201, 88%, 95%);
 }
 
 .recording-list .recording-item .screenshot img {
   width: 100%;
   object-fit: contain;
   height: 80px;
+}
+
+.recording-list .recording-item.selected {
+  background: hsl(201, 88%, 95%);
+  border-bottom: 1px solid hsl(201, 88%, 95%);
 }
 
 .recording-list .recording-item .page,
